fixed issue that embedded videos were not aligned to the left

--- a/wcfsetup/install/files/style/bbcode/video.scss
+++ b/wcfsetup/install/files/style/bbcode/video.scss
@@ -3,6 +3,7 @@
 	overflow: hidden;
 	padding-bottom: 56.25%; /* 9 / 16 */
 	position: relative;
+	text-align: left;
 	
 	iframe {
 		height: 100%;
